--- a/.pylintrc
+++ b/.pylintrc
@@ -258,7 +258,7 @@ ignore-on-opaque-inference=yes
 # List of class names for which member attributes should not be checked (useful
 # for classes with dynamically set attributes). This supports the use of
 # qualified names.
-ignored-classes=optparse.Values,thread._local,_thread._local
+ignored-classes=optparse.Values,thread._local,_thread._local,ndarray
 
 # List of module names for which member attributes should not be checked
 # (useful for modules/projects where namespaces are manipulated during runtime
@@ -465,7 +465,12 @@ good-names=i,
            ESM2,
            ds,
            f1,
-           f2
+           f2,
+           v,
+           d,
+           average_DT,
+           F,
+           FS
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
